--- a/marks/templates/marks/base_site.html
+++ b/marks/templates/marks/base_site.html
@@ -28,7 +28,7 @@
 <footer>
     {% block footer %}
     <div>
-        <img src="{% static "marks/black_logo.svg" %}" alt="Система ЭДС">
+        <img class="footer-image" src="{% static "marks/black_logo.svg" %}" alt="Система ЭДС">
         <div id="info">
             <span>2024 | MIT лицензия |</span><a href="https://loooltooot.github.io">© Эмир Закревский</a><span>|</span><a href="https://pkas58.ru/">ГАПОУ ПО “Пензенский колледж архитектуры и строительства”</a>
         </div>
