--- a/marks/static/marks/css/marks_table.css
+++ b/marks/static/marks/css/marks_table.css
@@ -118,5 +118,16 @@ table.student-table td:nth-child(2) {
 #show-mark-modal form {
   padding: 0;
 }
+#show-mark-modal textarea {
+  height: 100px;
+}
+
+@media screen and (max-width: 500px) {
+  #add-mark-modal .vals-list {
+    justify-content: center;
+    flex-wrap: wrap;
+    row-gap: 20px;
+  }
+}
 
 /*# sourceMappingURL=marks_table.css.map */
