--- a/marks/static/marks/css/marks_table.scss
+++ b/marks/static/marks/css/marks_table.scss
@@ -146,4 +146,18 @@ table {
     form {
         padding: 0;
     }
+
+    textarea {
+        height: 100px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    #add-mark-modal {
+        .vals-list {
+            justify-content: center;
+            flex-wrap: wrap;
+            row-gap: 20px;
+        }
+    }
 }
