--- a/marks/static/marks/css/style.css
+++ b/marks/static/marks/css/style.css
@@ -18,8 +18,18 @@
   --base-font-size: 16px;
   --s-font-size: 20px;
   --m-font-size: 40px;
+  --inline-padding: 60px;
 }
 
+@media screen and (max-width: 500px) {
+  :root {
+    --xs-font-size: 12px;
+    --base-font-size: 14px;
+    --s-font-size: 16px;
+    --m-font-size: 30px;
+    --inline-padding: 30px;
+  }
+}
 @font-face {
   font-family: Lato;
   font-weight: 400;
@@ -47,7 +57,7 @@
 
 body {
   min-height: 100vh;
-  padding: 40px 0 0;
+  padding: 0;
   background-color: var(--bg-color);
   box-sizing: border-box;
   display: flex;
@@ -56,7 +66,9 @@ body {
   row-gap: 150px;
 }
 body #top {
-  padding-inline: 60px;
+  padding-top: 40px;
+  padding-inline: var(--inline-padding);
+  box-sizing: border-box;
 }
 
 img,
@@ -310,6 +322,7 @@ td .mark_form {
   justify-content: center;
   opacity: 0;
   z-index: -1;
+  box-sizing: border-box;
 }
 .modal-window > :is(form, div) {
   row-gap: 50px;
@@ -348,9 +361,13 @@ td .mark_form {
 
 footer {
   background-color: var(--bg-light-color);
-  padding: 30px 60px;
+  padding-inline: var(--inline-padding);
+  padding-block: 30px;
   display: flex;
   justify-content: space-between;
+}
+footer .footer-image {
+  width: 220px;
 }
 footer #info {
   font-weight: 700;
@@ -363,6 +380,51 @@ footer #github {
 }
 footer #github:hover {
   filter: none;
+}
+
+@media screen and (max-width: 500px) {
+  body {
+    row-gap: 50px;
+  }
+  body #top {
+    overflow-x: clip;
+    row-gap: 50px;
+    padding-top: 30px;
+    min-height: calc(100vh - 50px);
+  }
+  .card {
+    padding: 25px;
+    max-width: 100%;
+  }
+  .modal-window div.flex,
+  .card div.flex {
+    row-gap: 20px;
+  }
+  .modal-window {
+    padding-inline: var(--inline-padding);
+  }
+  .modal-window :is(form, div) {
+    row-gap: 45px;
+  }
+  .profile .name span {
+    display: none;
+  }
+  footer {
+    padding-block: 30px;
+  }
+  footer .footer-image {
+    width: 167px;
+  }
+  footer #info {
+    flex-wrap: wrap;
+    row-gap: 2px;
+    margin-top: 20px;
+  }
+  footer #info a,
+  footer #info span {
+    color: var(--text-light-color);
+    font-size: var(--xs-font-size);
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
