--- a/users/static/users/css/login.css
+++ b/users/static/users/css/login.css
@@ -56,4 +56,20 @@ body {
   transform: rotate(7deg);
 }
 
+@media screen and (max-width: 500px) {
+  body #top {
+    row-gap: 80px;
+  }
+  body #top header {
+    justify-content: center;
+  }
+  .auth {
+    width: 100%;
+    row-gap: 45px;
+  }
+  #logo {
+    width: 167px !important;
+  }
+}
+
 /*# sourceMappingURL=login.css.map */
