--- a/users/static/users/css/login.scss
+++ b/users/static/users/css/login.scss
@@ -64,3 +64,22 @@ body {
         }
     }
 }
+
+@media screen and (max-width: 500px) {
+    body #top {
+        row-gap: 80px;
+
+        header {
+            justify-content: center;
+        }
+    }
+
+    .auth {
+        width: 100%;
+        row-gap: 45px;
+    }
+
+    #logo {
+        width: 167px !important;
+    }
+}
