--- a/marks/templates/marks/base.html
+++ b/marks/templates/marks/base.html
@@ -7,6 +7,7 @@
     <title>{{title|default:'Система ЭДС'}}</title>
     <link rel="stylesheet" href="{% static "marks/css/normalize.css" %}">
     <link rel="stylesheet" href="{% static "marks/css/style.css" %}">
+    <link rel="shortcut icon" href="{% static "marks/favicon.png" %}" type="image/x-icon">
     {% block page_styles %}{% endblock page_styles %}
     {% block extra_head %}{% endblock extra_head %}
 </head>
