--- a/marks/templates/404.html
+++ b/marks/templates/404.html
@@ -13,5 +13,28 @@
         justify-content: center;
         align-items: center;
     }
+
+    .card {
+        row-gap: 15px;
+        width: 300px;
+    }
+
+    h2, .button {
+        text-align: center;
+    }
+
+    a:hover {
+        color: var(--bg-light-color);
+    }
+
+    @media screen and (max-width: 500px) {
+        .card {
+            width: 100%;
+        }
+
+        body {
+            padding-inline: var(--inline-padding);
+        }
+    }
 </style>
 {% endblock body %}
