--- a/marks/static/marks/css/dashboard.css
+++ b/marks/static/marks/css/dashboard.css
@@ -33,12 +33,60 @@
   top: -15.5px;
 }
 
+.section-header {
+  align-items: center;
+}
+
+#course-selection-form {
+  display: flex;
+  column-gap: 30px;
+  align-items: center;
+}
+#course-selection-form input {
+  z-index: -1;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+#course-selection-form label {
+  cursor: pointer;
+}
+
+.input-radio-selector-wrapper {
+  display: flex;
+  column-gap: 15px;
+  align-items: center;
+  background-color: var(--bg-light-color);
+  padding-right: 15px;
+  border-radius: 10px;
+}
+.input-radio-selector-wrapper .input-radio-selector {
+  display: flex;
+  border-radius: 10px;
+  overflow: clip;
+  background-color: var(--primary-light-color);
+}
+.input-radio-selector-wrapper .input-radio-selector input:checked + label {
+  background-color: var(--primary-color);
+  color: var(--bg-light-color);
+}
+.input-radio-selector-wrapper .input-radio-selector label {
+  padding: 10px 15px;
+}
+
 @media screen and (max-width: 500px) {
   .subjects-list li {
     width: 100%;
   }
   .subjects-list .card {
     min-width: 100%;
+  }
+  #course-selection-form,
+  .section-header {
+    align-items: flex-start;
+    flex-direction: column;
+    row-gap: 15px;
   }
 }
 
