--- a/marks/static/marks/css/style.css
+++ b/marks/static/marks/css/style.css
@@ -187,6 +187,11 @@ section {
   row-gap: 25px;
 }
 
+.section-header {
+  display: flex;
+  column-gap: 30px;
+}
+
 .card {
   background-color: var(--bg-light-color);
   border-radius: 30px;
