huge big changes

--- a/marks/static/marks/css/marks_table.scss
+++ b/marks/static/marks/css/marks_table.scss
@@ -152,6 +152,43 @@ table {
     }
 }
 
+.is-final-checkbox {
+    display: flex;
+    width: fit-content;
+    margin-inline: auto;
+    column-gap: 10px;
+    align-items: center;
+
+    input {
+        width: 20px;
+        height: 20px;
+    }
+}
+
+.has-final-mark {
+    td:first-child {
+        position: relative;
+
+        &::before {
+            content: "";
+            width: 10px;
+            height: 100%;
+            position: absolute;
+            left: 0;
+            top: 0;
+            background-color: var(--module-color);
+        }
+    }
+
+    .fullname {
+        cursor: auto;
+
+        &:hover {
+            color: var(--text-color)
+        }
+    }
+}
+
 @media screen and (max-width: 500px) {
     #add-mark-modal {
         .vals-list {
