--- a/marks/static/marks/css/style.css
+++ b/marks/static/marks/css/style.css
@@ -297,6 +297,22 @@ table td.fullname {
   color: var(--primary-shade-color);
   z-index: 1;
 }
+.mark.final-mark {
+  cursor: pointer;
+  position: relative;
+}
+.mark.final-mark::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 100%;
+  border: 1px solid var(--secondary-color);
+  width: 1.3rem;
+  height: 1.3rem;
+  z-index: 1;
+}
 
 td:hover .mark_form {
   display: block;
