--- a/marks/templates/marks/dashboard/teacher.html
+++ b/marks/templates/marks/dashboard/teacher.html
@@ -32,12 +32,13 @@
     <ul class="subjects-list">
         {% for appointment in related_appointments %}
         <li>
-            <a class="card teacher flex" href="{% url "marks:show" appointment.students_unit_id appointment.subject_id %}">
+            <a class="card teacher flex" href="{% url "marks:show" appointment.id %}">
                 <h3>{{appointment.subject}}</h3>
                 {% if appointment.subject.description %}
                 <p>{{appointment.subject.description}}</p>
                 {% endif %}
                 <span>Группа: {{appointment.students_unit}}</span>
+                <span>Курс: {{appointment.course}} | Семестр: {{appointment.is_first_term|yesno:'1,2'}}</span>
                 <span>Студентов без оценок: <span class="mark">{{appointment.students_with_no_marks}}</span></span>
             </a>
         </li>
