--- a/marks/templates/marks/templatetags/average_mark_inclusion.html
+++ b/marks/templates/marks/templatetags/average_mark_inclusion.html
@@ -2,7 +2,7 @@
 
 {% if average_mark %}
 <div>
-    <span>Средний балл: </span>
+    <span>{% if not is_final %}Средний балл{% else %}Итоговая оценка{% endif %}: </span>
     <span class="mark">{{average_mark}}</span>
 </div>
 {% if img_src %}
