💄: admin color changed

--- a/marks/templates/admin/base.html
+++ b/marks/templates/admin/base.html
@@ -9,6 +9,11 @@
   --link-selected-fg: #39A0FF;
   --accent: #FFFFFF;
   --header-color: #FFFFFF;
+  --selected-row: #FF4259;
+
+  .current-model {
+    --link-fg: #FFFFFF;
+  }
 }
 </style>
 {% endblock %}
